--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -40,7 +40,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: flux-system
   timeout: 5m
   wait: false
   patches:
@@ -50,6 +49,7 @@ spec:
         kind: Kustomization
         metadata:
           name: not-used
+          namespace: flux-system
         spec:
           decryption:
             provider: sops
