--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -43,16 +43,24 @@ spec:
   timeout: 5m
   wait: false
   patches:
-    - # Add Sops decryption to all Kustomizations
-      patch: |-
+    # 1. Add Sops decryption (Standard Patch)
+    - patch: |-
         apiVersion: kustomize.toolkit.fluxcd.io/v1
         kind: Kustomization
         metadata:
           name: not-used
-          namespace: flux-system
         spec:
           decryption:
             provider: sops
+      target:
+        group: kustomize.toolkit.fluxcd.io
+        kind: Kustomization
+
+    # 2. FORCE Namespace to flux-system (JSON Patch)
+    - patch: |-
+        - op: add
+          path: /metadata/namespace
+          value: flux-system
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
