--- a/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
@@ -9,6 +9,7 @@ spec:
   chartRef:
     kind: OCIRepository
     name: satisfactory
+    namespace: flux-system
   maxHistory: 3
   install:
     remediation:
