make sure patch doesnt affect namespace

--- a/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
@@ -80,10 +80,10 @@ spec:
               requests:
                 memory: 4Gi
               limits:
-                memory: 8Gi
+                memory: 8Giz
     service:
       app:
-        controller: satisfactory
+        controller: *app
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "satisfactory.${SECRET_DOMAIN}"
