--- a/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
               requests:
                 memory: 4Gi
               limits:
-                memory: 8Giz
+                memory: 8Gi
     service:
       app:
         controller: *app
