--- a/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
+++ b/kubernetes/apps/games/satisfactory/app/helmrelease.yaml
@@ -73,7 +73,8 @@ spec:
                 memory: 8Gi
     service:
       app:
-        controller: *app
+        enabled: true
+        controller: satisfactory
         type: LoadBalancer
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "satisfactory.${SECRET_DOMAIN}"
