--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -57,6 +57,8 @@ spec:
         kind: Kustomization
     # Ensure namespace is set on all child Kustomizations
     - patch: |-
+        apiVersion: kustomize.toolkit.fluxcd.io/v1
+        kind: Kustomization
         metadata:
           namespace: flux-system
       target:
