--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -56,11 +56,8 @@ spec:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
     # Ensure namespace is set on all child Kustomizations
-    - patch: |-
-        apiVersion: kustomize.toolkit.fluxcd.io/v1
-        kind: Kustomization
-        metadata:
-          namespace: flux-system
+    - patch: |
+        {"metadata":{"namespace":"flux-system"}}
       target:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
