--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -43,21 +43,23 @@ spec:
   timeout: 5m
   wait: false
   patches:
-    # Add Sops decryption (Standard Patch)
-    - patch: |-
-        apiVersion: kustomize.toolkit.fluxcd.io/v1
-        kind: Kustomization
-        metadata:
-          name: not-used
-        spec:
-          decryption:
-            provider: sops
-      target:
-        group: kustomize.toolkit.fluxcd.io
-        kind: Kustomization
-    # Ensure namespace is set on all child Kustomizations
-    - patch: |
-        {"metadata":{"namespace":"flux-system"}}
-      target:
-        group: kustomize.toolkit.fluxcd.io
-        kind: Kustomization
+  # Add Sops decryption (Standard Patch)
+  - patch: |-
+      apiVersion: kustomize.toolkit.fluxcd.io/v1
+      kind: Kustomization
+      metadata:
+        name: not-used
+      spec:
+        decryption:
+          provider: sops
+    target:
+      group: kustomize.toolkit.fluxcd.io
+      kind: Kustomization
+  - patch: |-
+      apiVersion: kustomize.toolkit.fluxcd.io/v1
+      kind: Kustomization
+      metadata:
+        namespace: flux-system
+    target:
+      group: kustomize.toolkit.fluxcd.io
+      kind: Kustomization
