--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -59,6 +59,7 @@ spec:
       apiVersion: kustomize.toolkit.fluxcd.io/v1
       kind: Kustomization
       metadata:
+        name: not-used
         namespace: flux-system
     target:
       group: kustomize.toolkit.fluxcd.io
