wrap path in quotes, update cert-manager namespace

--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -57,8 +57,8 @@ spec:
       kind: Kustomization
   - patch: |
       - op: add
-        path: /metadata/namespace
-        value: flux-system
+        path: "/metadata/namespace"
+        value: "flux-system"
     target:
       group: kustomize.toolkit.fluxcd.io
       kind: Kustomization
