--- a/kubernetes/apps/games/satisfactory/ks.yaml
+++ b/kubernetes/apps/games/satisfactory/ks.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app satisfactory
+  namespace: flux-system
 spec:
   commonMetadata:
     labels:
